--- a/.eslintrc
+++ b/.eslintrc
@@ -5,12 +5,12 @@
   ],
   "env": {
     "es2015": true,
-    "browser": true,
+    "browser": true
   },
   "parserOptions": {
-    "sourceType": "module",
-    "parser": "@typescript-eslint/parser",
+    "sourceType": "module"
   },
+  "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "ignorePatterns": ["node_modules/", "dist/", "public/"],
   "rules": {
